compiler/arsenal-boot/crates/arsenal_parse/tests/snapshots/snake_eater__pass_corpus@038_mul_over_add.gw.snap
---
source: crates/arsenal_parse/tests/snake_eater.rs
expression: dump_text
---
Module @1:1..2:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `t` @1:4..1:5
    ParamList @1:5..1:8
      LParen `(` @1:5..1:6
      RParen `)` @1:6..1:7
    RetType @1:8..1:14
      Arrow `->` @1:8..1:10
      PathType @1:11..1:14
        Ident `u0` @1:11..1:13
    Block @1:14..2:1
      LBrace `{` @1:14..1:15
      LetStmt @1:16..1:35
        KwLet `let` @1:16..1:19
        WildcardPat @1:20..1:22
          Ident `_` @1:20..1:21
        Eq `=` @1:22..1:23
        BinaryExpr @1:24..1:33
          LiteralExpr @1:24..1:26
            IntLit `1` @1:24..1:25
          Plus `+` @1:26..1:27
          BinaryExpr @1:28..1:33
            LiteralExpr @1:28..1:30
              IntLit `2` @1:28..1:29
            Star `*` @1:30..1:31
            LiteralExpr @1:32..1:33
              IntLit `3` @1:32..1:33
        Semi `;` @1:33..1:34
      RBrace `}` @1:35..1:36
